--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,28 @@
 h1 {
   color: #ffffff;
 }
+
+.lingue {
+  width: 25px;
+}
+
+.main__container,
+.film__container,
+.serie_tv__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.film,
+.serie_tv {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.crop {
+  width: 340px;
+  height: 510px;
+  object-fit: cover;
+}
