--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,8 @@ body {
 .genere {
   text-align: center;
   font-size: .5em;
-  padding: 5px;
+  padding: 5px 10px;
+  line-height: 15px;
   background-color: #08AEEA;
   background-image: linear-gradient(69deg, #08AEEA 0%, #2AF598 100%);
   border-radius: 30px;
@@ -206,6 +207,7 @@ body {
 
 .modal__generi {
   display: flex;
+  flex-wrap: wrap;
   padding-left: 40px;
   font-size: 1.4em;
   color: #ffffff;
@@ -248,6 +250,7 @@ body {
 .sticky {
   position: sticky;
   width: 100%;
+  height: 100%;
   top: 0;
   background-color: #131722;
   padding: 50px;
