--- a/css/style.css
+++ b/css/style.css
@@ -615,7 +615,14 @@ body {
   .sticky {
     position: relative;
     overflow-y: unset;
+    width: 100%;
+    height: 100%;
+    background-color: #131722;
+    padding: 50px;
+    color: #ffffff;
+
   }
+
 
   .crop3 {
     width: 50%;
