--- a/css/style.css
+++ b/css/style.css
@@ -616,7 +616,7 @@ body {
     position: relative;
     overflow-y: unset;
     width: 100%;
-    height: 100%;
+    height: 700px;
     background-color: #131722;
     padding: 50px;
     color: #ffffff;
