--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,7 @@ body {
   position: fixed;
   top: 25px;
   right: 10%;
+  z-index: 6;
 }
 
 .close_icon {
@@ -433,8 +434,9 @@ body {
 /* ////////////  SLIDER //////////////////////////// */
 .swiper-container {
   width: 100%;
-  height: 600px;
+  height: 700px;
   background: #ffffff;
+  position: relative;
 }
 
 .swiper-slide {
@@ -451,10 +453,13 @@ body {
   top: 0;
   width: 130%;
   height: 100%;
-  -webkit-background-size: cover;
+  /* -webkit-background-size: cover; */
   background-size: cover;
-  background-position: center;
+  background-position: top;
+  z-index: -1;
 }
+
+
 
 .swiper-slide .title {
   padding-top: 50px;
@@ -471,6 +476,7 @@ body {
   max-width: 50%;
   line-height: 1.5;
   padding-top: 15px;
+  margin-bottom: 80px;
 }
 
 .padding {
@@ -578,6 +584,7 @@ body {
 
   .swiper-slide .text {
     max-width: 90%;
+    font-size: 0.8em;
   }
 
   .container {
@@ -614,7 +621,7 @@ body {
 
   .sticky {
     position: relative;
-    overflow-y: unset;
+    overflow-y: visible;
     width: 100%;
     height: 700px;
     background-color: #131722;
