--- a/css/style.css
+++ b/css/style.css
@@ -38,12 +38,14 @@ body {
   text-align: center;
   font-size: .5em;
   padding: 5px 10px;
+  height: 25px;
   line-height: 15px;
   background-color: #08AEEA;
   background-image: linear-gradient(69deg, #08AEEA 0%, #2AF598 100%);
   border-radius: 30px;
   margin: 3px;
 }
+
 
 /* /////////////// HOME PAGE - POPOLARI /////////////// */
 .film-popolari,
@@ -147,7 +149,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.8);
   display: none;
@@ -169,7 +171,7 @@ body {
   display: flex;
 }
 
-.modal__container__left,
+
 .modal__container__right,
 .schede_attori {
   display: flex;
@@ -177,10 +179,9 @@ body {
 }
 
 .modal__container__left {
-  /* flex-basis: 30%; */
+  flex-basis: 30%;
   min-width: 300px;
 
-  display: flex;
   text-align: center;
   align-items: center;
 }
@@ -190,9 +191,7 @@ body {
 }
 
 .modal__lingua {
-  padding: 10px 0;
-  line-height: 50px;
-  display: flex;
+  padding: 15px 0;
 }
 
 .modal__container__right {
@@ -200,7 +199,7 @@ body {
 }
 
 .modal__container__right h2 {
-  padding: 40px;
+  margin: 40px;
 }
 
 .modal__container__right p {
@@ -215,6 +214,10 @@ body {
   color: #ffffff;
 }
 
+.margin{
+  padding-left: 0;
+  margin: 20px 0;
+}
 .schede_attori {
   padding-bottom: 25px;
   padding: 20px;
@@ -252,19 +255,17 @@ body {
 
 .sticky {
   position: sticky;
-  flex-basis: 30%;
-  width: 100%;
-  height: 100%;
   top: 0;
   background-color: #131722;
   padding: 50px;
   color: #ffffff;
-  /* overflow-y: auto; */
+  overflow-y: auto;
 }
 
 .lingue {
   width: 25px;
   margin: 0 10px;
+  vertical-align: middle;
 }
 
 .main__container,
@@ -415,6 +416,7 @@ body {
 .overlay__voto {
   color: #24baef;
   font-size: 1.1em;
+  margin-bottom: 15px;
 }
 
 /* //////////// INTESTAZIONE FILM ////////////////*/
@@ -484,9 +486,7 @@ body {
   margin-bottom: 80px;
 }
 
-.padding {
-  padding: 10px 0 0 0;
-}
+
 
 /* MEDIA QUERY */
 @media screen and (min-width: 1400px) and (max-width: 1800px) {
@@ -624,11 +624,11 @@ body {
     flex-direction: column;
   }
 
+
   .sticky {
     position: relative;
-    /* overflow-y: visible; */
-    width: 100%;
-    height: 700px;
+    overflow-y: visible;
+
     background-color: #131722;
     padding: 50px;
     color: #ffffff;
