--- a/css/style.css
+++ b/css/style.css
@@ -249,8 +249,9 @@ body {
 }
 
 .close_icon {
-  color: #ffffff;
+  color: #08AEEA;
   font-size: 1.8em;
+  
 }
 
 .sticky {
@@ -605,9 +606,7 @@ body {
     z-index: 3;
   }
 
-  h1 {
-    padding: 5px;
-  }
+
 
   .right__search:hover>.input-search {
     width: 200px;
@@ -638,6 +637,12 @@ body {
     width: 50%;
   }
 
+  .fixed {
+      position: fixed;
+      top: 75px;
+      right: 18%;
+
+  }
   .schede_attori {
     width: calc(100% / 1);
   }
